deploy/ex2/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: kube-config
spec:
  type: ClusterIP
  selector:
    app: nginx-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
